# Subnet

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ecosystem.config.js  min_compute.yml  pyproject.toml  run.sh  setup.sh
.github/workflows/: ci.yml
app/: main.py
app/api/: responses.py  tasks.py
app/core/: config.py  database.py  migrations.py  rank_history.py  scoring.py  validator.py
app/miners/: mock.py
app/models/: __init__.py  challenge.py  farm.py  farm_analysis.py  response.py  task.py
app/schemas/: response.py  task.py
docs/: Mining.md  Validating.md  localnet.md  roadmap.md
neurons/: miner.py  validator.py
scripts/: demo_scoring.py  healthcheck.py  localnet_e2e.py  preflight.py  run_neuron.py  smoke_test_live_loop.py  start_miner.sh  start_validator.sh
subnet/: __init__.py  mock.py  observability.py  protocol.py
subnet/base/: miner.py  neuron.py  validator.py
subnet/data/: __init__.py  backend_satellite.py  features.py  ground_truth.py  satellite.py  sentinelhub.py  weather.py
subnet/validator/: anti_gaming.py  challenge.py  challenge_spec.py  config.py  forward.py  rank_history.py
tests/: test_anti_gaming.py  test_ground_truth.py  test_healthcheck.py  test_observability.py  test_rank_history.py  test_scoring.py
