[project]
name = "rairai-subnet"
version = "0.1.0"
description = "RaiRai-Labs Bittensor subnet validator API — agricultural yield prediction tasks & miner scoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "loguru>=0.7.3",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.29.0",
]
